k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-p3
spec:
  replicas: 5
  selector:
    matchLabels:
      app: app-p3
  template:
    metadata:
      labels:
        app: app-p3
    spec:
      containers:
        - name: app-p3
          image: "wil42/playground:v2"
          ports:
            - containerPort: 8888
