k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-p3
spec:
  selector:
    app: app-p3

  ports:
    - port: 80
      targetPort: 8888
